--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,46 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+/** App **/
+main {
+    margin: 0 auto;
+    /* width: 30em; */
+    width: auto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+main > h1 {
+    text-align: center;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/** Board **/
+.board {
+    display: inline;
+    /* border: 3px solid #ccc; */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.board .row {
+    display: flex;
+    justify-content: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.board .col {
+    width: 80px;
+    height: 80px;
+    font-size: 72px;
+    text-align: center;
+    cursor: pointer;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.board .row:nth-child(1) .col {
+    border-bottom: 1px solid #ccc;
+}
+
+.board .row:nth-child(3) .col {
+    border-top: 1px solid #ccc;
+}
+
+.board .col:nth-child(3n+1) {
+    border-right: 1px solid #ccc;
+}
+
+.board .col:nth-child(3n) {
+    border-left: 1px solid #ccc;
 }
