--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,17 @@ p.message {
 p.winner {
     color: red;
 }
+
+button.reset {
+    display: block;
+    margin: 2em auto;
+    background: #ccc;
+    border: 2px solid #aaa;
+    padding: 0.7em;
+    font-size: medium;
+    cursor: pointer;
+}
+
+button.reset:hover {
+    background-color: #bbb;;
+}
