--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+/** Document **/
+body {
+     min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    min-height: 30px;
+}
+
+#root {
+    flex: 1;
+}
+
 /** App **/
 main {
     margin: 0 auto;
